--- a/src/BaGet.Web/Pages/Index.cshtml
+++ b/src/BaGet.Web/Pages/Index.cshtml
@@ -190,7 +190,9 @@ else
         { "header1", ".NET" },
 
         { "net5.0", ".NET 5.0" },
-
+        { "net6.0", ".NET 6.0" },
+        { "net7.0", ".NET 7.0" },
+        { "net8.0", ".NET 8.0" },
         { "divider2", "-" },
         { "header2", ".NET Standard" },
 
